@@ -2581,7 +2581,6 @@ static void SQLR_FetchOutputBinds(SQLHSTMT statementhandle) {
 				ds->year=year;
 				ds->month=month;
 				ds->day=day;
-				// FIXME: isnegative?
 				}
 				break;
 			case SQL_C_TIME:
@@ -2608,7 +2607,6 @@ static void SQLR_FetchOutputBinds(SQLHSTMT statementhandle) {
 				ts->hour=hour;
 				ts->minute=minute;
 				ts->second=second;
-				// FIXME: isnegative?
 				}
 				break;
 			case SQL_C_TIMESTAMP:
@@ -2640,7 +2638,6 @@ static void SQLR_FetchOutputBinds(SQLHSTMT statementhandle) {
 				ts->minute=minute;
 				ts->second=second;
 				ts->fraction=microsecond*10;
-				// FIXME: isnegative?
 				}
 				break;
 			case SQL_C_INTERVAL_YEAR:
@@ -3255,7 +3252,6 @@ static void SQLR_ParseDate(DATE_STRUCT *ds, const char *value) {
 	ds->year=(year!=-1)?year:0;
 	ds->month=(month!=-1)?month:0;
 	ds->day=(day!=-1)?day:0;
-	// FIXME: isnegative?
 }
 
 static void SQLR_ParseTime(TIME_STRUCT *ts, const char *value) {
@@ -3290,7 +3286,6 @@ static void SQLR_ParseTime(TIME_STRUCT *ts, const char *value) {
 	ts->hour=(hour!=-1)?hour:0;
 	ts->minute=(minute!=-1)?minute:0;
 	ts->second=(second!=-1)?second:0;
-	// FIXME: isnegative?
 }
 
 static void SQLR_ParseTimeStamp(TIMESTAMP_STRUCT *tss, const char *value) {
@@ -3329,7 +3324,6 @@ static void SQLR_ParseTimeStamp(TIMESTAMP_STRUCT *tss, const char *value) {
 	tss->minute=(minute!=-1)?minute:0;
 	tss->second=(second!=-1)?second:0;
 	tss->fraction=(fraction!=-1)?fraction:0;
-	// FIXME: isnegative?
 }
 
 static SQLRETURN SQLR_SQLGetData(SQLHSTMT statementhandle,
@@ -7637,7 +7631,6 @@ static SQLRETURN SQLR_InputBindParameter(SQLHSTMT statementhandle,
 			{
 			debugPrintf("  valuetype: SQL_C_DATE/SQL_C_TYPE_DATE\n");
 			DATE_STRUCT	*ds=(DATE_STRUCT *)parametervalue;
-			// FIXME: isnegative?
 			stmt->cur->inputBind(parametername,
 						ds->year,ds->month,ds->day,
 						0,0,0,0,NULL,false);
@@ -7648,7 +7641,6 @@ static SQLRETURN SQLR_InputBindParameter(SQLHSTMT statementhandle,
 			{
 			debugPrintf("  valuetype: SQL_C_TIME/SQL_C_TYPE_TIME\n");
 			TIME_STRUCT	*ts=(TIME_STRUCT *)parametervalue;
-			// FIXME: isnegative?
 			stmt->cur->inputBind(parametername,
 						0,0,0,
 						ts->hour,ts->minute,ts->second,
@@ -7662,7 +7654,6 @@ static SQLRETURN SQLR_InputBindParameter(SQLHSTMT statementhandle,
 				"SQL_C_TIMESTAMP/SQL_C_TYPE_TIMESTAMP\n");
 			TIMESTAMP_STRUCT	*tss=
 					(TIMESTAMP_STRUCT *)parametervalue;
-			// FIXME: isnegative?
 			stmt->cur->inputBind(parametername,
 					tss->year,tss->month,tss->day,
 					tss->hour,tss->minute,tss->second,
