@@ -936,8 +936,6 @@ bool odbccursor::inputBind(const char *variable,
 				uint16_t buffersize,
 				int16_t *isnull) {
 
-	// FIXME: isnegative?
-
 	bool	validdate=(year>=0 && month>=0 && day>=0);
 	bool	validtime=(hour>=0 && minute>=0 && second>=0 && microsecond>=0);
 
@@ -1122,11 +1120,9 @@ bool odbccursor::outputBind(const char *variable,
 	db->second=second;
 	db->microsecond=microsecond;
 	db->tz=tz;
+	*isnegative=false;
 	db->buffer=buffer;
 	outdatebind[outbindcount]=db;
-
-	// FIXME: isnegative?
-	*isnegative=false;
 
 	erg=SQLBindParameter(stmt,
 				charstring::toInteger(variable+1),
