@@ -26,6 +26,7 @@
 	added result set row translation module framework
 	updated firebird connection module to  the fieldstruct.textbuffer
 		instead of fieldbuffer for non-text to text translations
+	added isnegative flag to input/outputBind for date/times, for mysql
 
 0.66.0 - fixed mysql set isolation level query
 	updated mysql connection to run commit/rollback at the end of every
